<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VPN Hotspot</string>
    <string name="title_repeater">Repeater</string>
    <string name="title_tethering">Tethering</string>
    <string name="title_clients">Clients</string>
    <string name="title_settings">Settings</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="repeater_frequency">%s MHz</string>
    <string name="repeater_features">Supported features:</string>
    <string name="repeater_feature_set_vendor_elements">Set vendor elements</string>
    <string name="repeater_feature_group_client_removal">Remove client</string>
    <string name="repeater_feature_pcc_mode">WPA3-SAE Compatibility Mode</string>
    <string name="repeater_feature_wifi_direct_r2">WPA3-SAE</string>
    <string name="repeater_wps">WPS (insecure)</string>
    <string name="repeater_wps_dialog_title">Enter PIN</string>
    <string name="repeater_wps_dialog_pbc">Push Button</string>
    <string name="repeater_wps_success_pbc">Please use WPS push button within the next 2 minutes to connect your
        device</string>
    <string name="repeater_wps_success_keypad">PIN registered</string>
    <string name="repeater_wps_failure">Failed to start WPS (reason: %s)</string>
    <string name="repeater_configure_failure">Valid config not found. Please start repeater first.</string>
    <string name="repeater_configuration_method">Configuration method</string>
    <string name="repeater_configuration_method_framework">Framework</string>
    <string name="repeater_configuration_method_supplicant">Supplicant</string>
    <string name="repeater_configuration_method_framework_summary">Creates the network through Android framework APIs. Some framework restrictions still apply</string>
    <string name="repeater_configuration_method_supplicant_summary">Creates the network through &lt;tt&gt;wpa_supplicant&lt;/tt&gt; directly. Android may persist the network in system storage.&lt;br&gt;Supplicant version: %s</string>
    <string name="repeater_clean_pog_failure">Failed to remove redundant P2P group (reason: %s)</string>
    <string name="repeater_p2p_unavailable">Wi\u2011Fi direct unavailable, please enable Wi\u2011Fi</string>
    <string name="repeater_p2p_unavailable_enable">Enable</string>
    <string name="repeater_create_group_failure">Failed to create P2P group (reason: %s)</string>
    <string name="repeater_remove_group_failure">Failed to remove P2P group (reason: %s)</string>
    <string name="repeater_remove_old_group_failure">Failed to remove old P2P group (reason: %s)</string>
    <string name="repeater_set_vendor_elements_failure">Failed to set vendor elements (reason: %s)</string>
    <string name="repeater_failure_reason_error">internal error</string>
    <string name="repeater_failure_reason_p2p_unsupported">Wi\u2011Fi direct unsupported</string>
    <string name="repeater_failure_reason_no_service_requests">no service requests added</string>
    <string name="repeater_failure_reason_unsupported_operation">unsupported operation</string>
    <string name="repeater_failure_disconnected">Service unavailable. Try again later</string>
    <string name="repeater_missing_location_permissions">Repeater requires permissions for accessing fine
        location</string>
    <string name="repeater_location_off">Due to system restrictions, turning Location off may lead to things not working
        properly and increased battery usage</string>
    <string name="repeater_location_off_configure">Configure</string>
    <string name="tethering_temp_hotspot">Temporary Wi\u2011Fi hotspot</string>
    <string name="tethering_location_off">This feature requires location to be turned on</string>
    <string name="tethering_temp_hotspot_failure">Failed to start hotspot (reason: %s)</string>
    <string name="tethering_temp_hotspot_failure_no_channel">no channel</string>
    <string name="tethering_temp_hotspot_failure_generic">generic error</string>
    <string name="tethering_temp_hotspot_failure_incompatible_mode">incompatible mode</string>
    <string name="tethering_temp_hotspot_failure_tethering_disallowed">tethering disallowed</string>
    <string name="tethering_watch_reconnect">Watch for reconnect</string>
    <string name="tethering_manage">Manage system tethering…</string>
    <string name="tethering_manage_offload_enabled">Please disable Tethering hardware acceleration in Developer options
        if VPN tethering does not work.</string>
    <string name="tethering_manage_usb">USB tethering</string>
    <string name="tethering_manage_wifi">Wi\u2011Fi hotspot</string>
    <string name="tethering_manage_bluetooth">Bluetooth tethering</string>
    <string name="tethering_manage_ethernet">Ethernet tethering</string>
    <string name="tether_type_none">Unknown tethering type</string>
    <string name="tether_type_wifi_p2p">Wi\u2011Fi Direct</string>
    <string name="tether_type_ncm">USB NCM tethering</string>
    <string name="tether_type_wigig">WiGig tethering</string>
    <string name="tether_type_virtual">Virtual tethering</string>
    <string name="tether_error_message">%1$s: %2$s</string>
    <string name="tethering_manage_wifi_info">%1$s MHz, channel %2$s, width %3$s</string>
    <string name="tethering_manage_wifi_info_timeout_enabled">%4$s: Wi\u2011Fi %5$s, %1$s MHz, channel %2$s,
        width %3$s, idle timeout in %6$s</string>
    <string name="tethering_manage_wifi_info_timeout_disabled">%4$s: Wi\u2011Fi %5$s, %1$s MHz, channel %2$s,
        width %3$s, idle timeout disabled</string>
    <plurals name="tethering_manage_wifi_client_limit">
        <item quantity="one">%1$s/%2$s client connected</item>
        <item quantity="other">%1$s/%2$s clients connected</item>
    </plurals>
    <plurals name="tethering_manage_wifi_clients">
        <item quantity="one">%1$s client connected</item>
        <item quantity="other">%1$s clients connected</item>
    </plurals>
    <string name="tethering_manage_wifi_supported_channels">\nSupported channels:%1$s</string>
    <string name="tethering_manage_wifi_country_code">Driver country code: %1$s</string>
    <string name="tethering_manage_wifi_vendor_data">Vendor data:\n%1$s</string>
    <string name="tethering_manage_wifi_feature_ap_mac_randomization">Randomized AP MAC</string>
    <string name="tethering_manage_wifi_feature_bridged_ap_concurrency">Bridged AP concurrency</string>
    <string name="tethering_manage_wifi_feature_sta_ap_concurrency">STA + AP concurrency</string>
    <string name="tethering_manage_wifi_feature_sta_bridged_ap_concurrency">STA + Bridged AP concurrency</string>
    <string name="tethering_manage_wifi_feature_acs_offload">Automatic channel selection</string>
    <string name="tethering_manage_wifi_feature_client_force_disconnect">Client force disconnect</string>
    <string name="tethering_manage_wifi_feature_wpa3_sae">WPA3-SAE authentication</string>
    <string name="tethering_manage_wifi_feature_mac_address_customization">MAC address customization</string>
    <string name="tethering_manage_wifi_feature_ieee80211ax">802.11ax Soft AP</string>
    <string name="tethering_manage_wifi_feature_band_supported">%s band support</string>
    <string name="tethering_manage_wifi_feature_ieee80211be">802.11be Soft AP</string>
    <string name="tethering_manage_wifi_feature_wpa3_owe_transition">WPA3-OWE transition</string>
    <string name="tethering_manage_wifi_feature_wpa3_owe">WPA3-OWE</string>
    <string name="tethering_manage_wifi_feature_mlo">Multiple link operation</string>
    <string name="tethering_manage_wifi_no_features">None</string>
    <string name="tethering_manage_wifi_client_blocked">Blocked %1$s: %2$s</string>
    <string name="tethering_manage_wifi_client_disconnected">%1$s disconnected: %2$s</string>
    <string name="tethering_manage_wifi_copy_mac">Copy MAC</string>
    <string name="tether_error_no_error">no error</string>
    <string name="tether_error_unknown_iface">unknown interface</string>
    <string name="tether_error_service_unavailable">tethering service unavailable</string>
    <string name="tether_error_unsupported">unsupported tethering type</string>
    <string name="tether_error_unavailable_iface">interface unavailable</string>
    <string name="tether_error_internal">internal tethering error</string>
    <string name="tether_error_tether_iface">failed to tether interface</string>
    <string name="tether_error_untether_iface">failed to untether interface</string>
    <string name="tether_error_enable_forwarding">failed to enable forwarding</string>
    <string name="tether_error_disable_forwarding">failed to disable forwarding</string>
    <string name="tether_error_iface_config">interface configuration failed</string>
    <string name="tether_error_provisioning_failed">provisioning failed</string>
    <string name="tether_error_dhcp_server">DHCP server failed</string>
    <string name="tether_error_entitlement_unknown">entitlement status unknown</string>
    <string name="tether_error_no_change_permission">missing permission to change tethering</string>
    <string name="tether_error_no_access_permission">missing permission to access tethering</string>
    <string name="tether_error_unknown_type">unknown tethering type</string>
    <string name="tether_error_unknown_request">unknown tethering request</string>
    <string name="tether_error_duplicate_request">duplicate tethering request</string>
    <string name="softap_start_failure_general">other start failure</string>
    <string name="softap_start_failure_no_channel">no legal channel</string>
    <string name="softap_start_failure_unsupported_configuration">configuration unsupported by HAL</string>
    <string name="softap_start_failure_user_rejected">hotspot creation declined</string>
    <string name="softap_client_blocked_by_user">not allowed by client control</string>
    <string name="softap_client_blocked_no_more_stas">maximum client capacity reached</string>
    <string name="softap_disconnect_reason_unknown">unknown reason</string>
    <string name="softap_disconnect_reason_unspecified">unspecified reason</string>
    <string name="softap_disconnect_reason_previous_auth_not_valid">previous authentication no longer valid</string>
    <string name="softap_disconnect_reason_deauth_leaving">client deauthenticated</string>
    <string name="softap_disconnect_reason_inactivity">inactive client</string>
    <string name="softap_disconnect_reason_ap_busy">AP unable to handle associated stations</string>
    <string name="softap_disconnect_reason_class2_frame_from_non_auth">Class 2 frame from unauthenticated station</string>
    <string name="softap_disconnect_reason_class3_frame_from_non_assoc">Class 3 frame from unassociated station</string>
    <string name="softap_disconnect_reason_sta_left">station left</string>
    <string name="softap_disconnect_reason_assoc_without_auth">association requested without authentication</string>
    <string name="softap_disconnect_reason_power_capability_not_valid">invalid power capability</string>
    <string name="softap_disconnect_reason_supported_channel_not_valid">invalid supported channel element</string>
    <string name="softap_disconnect_reason_bss_transition">BSS transition disassociation</string>
    <string name="softap_disconnect_reason_invalid_ie">invalid information element</string>
    <string name="softap_disconnect_reason_michael_mic_failure">message integrity code failure</string>
    <string name="softap_disconnect_reason_four_way_handshake_timeout">four-way handshake timeout</string>
    <string name="configuration_view">Wi\u2011Fi configuration</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_hotspot_ap_band_title">AP Band</string>
</resources>