<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/monitor"
          android:icon="@drawable/ic_image_remove_red_eye"
          android:title="@string/tethering_monitor"
          android:enabled="false"
          android:visible="false"
          app:showAsAction="always">
        <menu/>
    </item>

    <item android:id="@+id/configuration"
          android:icon="@drawable/ic_device_wifi_lock"
          android:title="@string/configuration_view"
          app:showAsAction="always">
        <menu>
            <item android:id="@+id/configuration_repeater"
                  android:title="@string/title_repeater"/>
            <item android:id="@+id/configuration_temp_hotspot"
                  android:title="@string/tethering_temp_hotspot"/>
            <item android:id="@+id/configuration_ap"
                  android:title="@string/tethering_manage_wifi"/>
        </menu>
    </item>
</menu>
