<?xml version="1.0" encoding="utf-8"?>
<!-- Based on: https://android.googlesource.com/platform/packages/apps/Settings/+/6b4a31c/res/layout/wifi_ap_dialog.xml -->
<!-- Copyright (C) 2010 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        style="@style/wifi_item">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ssid_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_edit_content"
                android:hint="@string/wifi_ssid"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLength="32" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/security_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_label"
                android:text="@string/wifi_security" />
            <Spinner
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_content"
                android:prompt="@string/wifi_security" />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_edit_content"
                android:singleLine="true"
                android:hint="@string/wifi_password"
                android:inputType="textPassword"
                android:typeface="monospace"
                android:maxLength="63"
                android:imeOptions="flagForceAscii" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/band_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_label"
                android:text="@string/wifi_hotspot_ap_band_title" />
            <Spinner
                android:id="@+id/band"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/wifi_item_content"
                android:prompt="@string/wifi_hotspot_ap_band_title" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
